version.

* Latest

- Prevent situations where TOC wouldn't be loaded correctly
- Add Amy Rose!
- Add framework for extra hitboxes on player
- Add Tails/Amy extra hitboxes (Piko Piko Hammer, Piko Spin, tail attack)
- Generalize behaviours on bosses and objects for ease of use
- Add SPU SRAM debriefing on space available/used/free

* SAGE 2025 Build: v0.5.1 (2025-08-05)

- Fix a  bug where  the player  would remain  on air  if restarting  level while
  standing over an object
- Fix a  bug where old  object placements were  not being entirely  cleared upon
  respawn
- Fix a bug where the player would  "slide" with an idle animation after holding
  right, on very specific manual respawns

* v0.5 (2025-08-03)

- Remove embedded debug font to make room for offscreen rendering
- Add missing credits for AOZ music
- Add improved, offscreen-buffered character rendering
- Changes to R0Z4
- Remove CD-XA BGM playback engine
- Add CD-DA BGM playback engine
- Add Options screen
- Add visual data for Dawn Canyon (R4)
- Add script  for generating  128x128 tilemap  from pre-existing  Aseprite files
  (chunkmapper.py)
- Add an option to draw some levels in front of player
- Add level-specific object positioning and rendering
- Duplicate size of common and level-specific object textures with same palette
- [R0] Add Ballhog enemy and bouncing bomb
- Change level  and object rendering  to leverage global/extern  variables, thus
  accelerating the rendering process
- Add extra sound effects (bomb, goal sign, Knuckles climb/drop)
- Change 1-Up sound to be agnostic to player character
- Add ceiling collision to dropped rings
- Change goal sign art style to match characters
- Add boss loading routine
- [R0] Add boss (Egg Bomber)
- Add routines to generate alternate palette for boss (when it is hit)
- Fix animation fragment positioning when it is flipped
- Make changes to camera so we have limits for boss arena
- Limit player behaviour when camera is fixed on certain kinds of events